tests/fixtures/invalid/bytes_gt_set.py
# Cannot compare with > Bytes and Set[int]
x: bool = b"hello" > {1, 2, 3}
